// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Common/<HobbyItem /> should render component with discovered and discoveredDetails 1`] = `
<div
  className="hobby-container row valign-wrapper"
>
  <div
    className="col s12 m3 visual"
  >
    <h5
      className="name"
    >
      name
    </h5>
    <img
      alt="icon"
      className="image"
      src="image"
    />
  </div>
  <div
    className="col s12 m9"
  >
    <p
      className="description"
    >
      description
    </p>
  </div>
</div>
`;

exports[`components/Common/<HobbyItem /> should render component with discovered and no discoveredDetails 1`] = `
<div
  className="hobby-container row valign-wrapper"
>
  <div
    className="col s12 m3 visual"
  >
    <h5
      className="name"
    >
      name
    </h5>
    <img
      alt="icon"
      className="image"
      src="image"
    />
  </div>
  <div
    className="col s12 m9"
  >
    <p
      className="description"
    >
      ***
    </p>
  </div>
</div>
`;

exports[`components/Common/<HobbyItem /> should render component with no discovered and discoveredDetails 1`] = `
<div
  className="hobby-container row valign-wrapper"
>
  <div
    className="col s12 m3 visual"
  >
    <h5
      className="name"
    >
      ***
    </h5>
    <img
      alt="icon"
      className="image"
      src="test-file-stub"
    />
  </div>
  <div
    className="col s12 m9"
  >
    <p
      className="description"
    >
      description
    </p>
  </div>
</div>
`;

exports[`components/Common/<HobbyItem /> should render component with no discovered and no discoveredDetails 1`] = `
<div
  className="hobby-container row valign-wrapper"
>
  <div
    className="col s12 m3 visual"
  >
    <h5
      className="name"
    >
      ***
    </h5>
    <img
      alt="icon"
      className="image"
      src="test-file-stub"
    />
  </div>
  <div
    className="col s12 m9"
  >
    <p
      className="description"
    >
      ***
    </p>
  </div>
</div>
`;
